css/pico.css
/* ... */
details[role=list] summary:not([role]):active, details[role=list] summary:not([role]):focus {
  border-color: var(--pico-form-element-active-border-color);
  background-color: var(--pico-form-element-active-background-color);
}
details[role=list] summary:not([role]):focus {
  box-shadow: 0 0 0 var(--pico-outline-width) var(--pico-form-element-focus-color);
}
details[role=list][open] summary {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
details[role=list][open] summary::before {
  display: block;
  z-index: 1;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: none;
  content: "";
  cursor: default;
}

nav details[role=list] summary,
nav li[role=list] a {
  display: flex;
  direction: ltr;
}

nav details[role=list] summary + ul,
nav li[role=list] > ul {
  min-width: -moz-fit-content;
  min-width: fit-content;
  border-radius: var(--pico-border-radius);
}
nav details[role=list] summary + ul li a,
nav li[role=list] > ul li a {
  border-radius: 0;
}

nav details[role=list] summary,
nav details[role=list] summary:not([role]) {
  height: auto;
  padding: var(--pico-nav-link-spacing-vertical) var(--pico-nav-link-spacing-horizontal);
}
nav details[role=list][open] summary {
  border-radius: var(--pico-border-radius);
}
nav details[role=list] summary + ul {
  margin-top: var(--pico-outline-width);
  -webkit-margin-start: 0;
  margin-inline-start: 0;
}
nav details[role=list] summary[role=link] {
  margin-bottom: calc(var(--pico-nav-link-spacing-vertical) * -1);
  line-height: var(--pico-line-height);
}
nav details[role=list] summary[role=link] + ul {
  margin-top: calc(var(--pico-nav-link-spacing-vertical) + var(--pico-outline-width));
  -webkit-margin-start: calc(var(--pico-nav-link-spacing-horizontal) * -1);
  margin-inline-start: calc(var(--pico-nav-link-spacing-horizontal) * -1);
}

li[role=list]:hover > ul,
li[role=list] a:active ~ ul,
li[role=list] a:focus ~ ul {
  display: flex;
}
li[role=list] > ul {
  display: none;
  margin-top: calc(var(--pico-nav-link-spacing-vertical) + var(--pico-outline-width));
  -webkit-margin-start: calc(var(--pico-nav-element-spacing-horizontal) - var(--pico-nav-link-spacing-horizontal));
  margin-inline-start: calc(var(--pico-nav-element-spacing-horizontal) - var(--pico-nav-link-spacing-horizontal));
}
li[role=list] > a::after {
  background-image: var(--pico-icon-chevron);
}

/**
 * Loading ([aria-busy=true])
 */
[aria-busy=true] {
  cursor: progress;
}

[aria-busy=true]:not(input, select, textarea)::before {
  display: inline-block;
  width: 1em;
  height: 1em;
  border: 0.1875em solid currentColor;
  border-radius: 1em;
  border-right-color: transparent;
  content: "";
  vertical-align: text-bottom;
  vertical-align: -0.125em;
  animation: spinner 0.75s linear infinite;
  opacity: var(--pico-loading-spinner-opacity);
}
[aria-busy=true]:not(input, select, textarea):not(:empty)::before {
  margin-right: calc(var(--pico-spacing) * 0.5);
  margin-left: 0;
  -webkit-margin-start: 0;
  margin-inline-start: 0;
  -webkit-margin-end: calc(var(--pico-spacing) * 0.5);
  margin-inline-end: calc(var(--pico-spacing) * 0.5);
}
[aria-busy=true]:not(input, select, textarea):empty {
  text-align: center;
}

button[aria-busy=true],
input[type=submit][aria-busy=true],
input[type=button][aria-busy=true],
input[type=reset][aria-busy=true],
a[aria-busy=true] {
  pointer-events: none;
}

@keyframes spinner {
  to {
    transform: rotate(360deg);
  }
}
/**
 * Modal (<dialog>)
 */
:root {
  --pico-scrollbar-width: 0px;
}

dialog {
  display: flex;
  z-index: 999;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  align-items: center;
  justify-content: center;
  width: inherit;
  min-width: 100%;
  height: inherit;
  min-height: 100%;
  padding: var(--pico-spacing);
  border: 0;
  -webkit-backdrop-filter: var(--pico-modal-overlay-backdrop-filter);
  backdrop-filter: var(--pico-modal-overlay-backdrop-filter);
  background-color: var(--pico-modal-overlay-background-color);
  color: var(--pico-color);
}
dialog article {
  max-height: calc(100vh - var(--pico-spacing) * 2);
  overflow: auto;
}
@media (min-width: 576px) {
  dialog article {
    max-width: 510px;
  }
}
@media (min-width: 768px) {
  dialog article {
    max-width: 700px;
  }
}
dialog article > header,
dialog article > footer {
  padding: calc(var(--pico-block-spacing-vertical) * 0.5) var(--pico-block-spacing-horizontal);
}
dialog article > header .close {
  margin: 0;
  margin-left: var(--pico-spacing);
  float: right;
}
dialog article > footer {
  text-align: right;
}
dialog article > footer [role=button] {
  margin-bottom: 0;
}
dialog article > footer [role=button]:not(:first-of-type) {
  margin-left: calc(var(--pico-spacing) * 0.5);
}
dialog article p:last-of-type {
  margin: 0;
}
dialog article .close {
  display: block;
  width: 1rem;
  height: 1rem;
  margin-top: calc(var(--pico-spacing) * -1);
  margin-bottom: var(--pico-spacing);
  margin-left: auto;
  background-image: var(--pico-icon-close);
  background-position: center;
  background-size: auto 1rem;
  background-repeat: no-repeat;
  opacity: 0.5;
  transition: opacity var(--pico-transition);
}
dialog article .close:is([aria-current], :hover, :active, :focus) {
  opacity: 1;
}
dialog:not([open]), dialog[open=false] {
  display: none;
}

.modal-is-open {
  padding-right: var(--pico-scrollbar-width, 0px);
  overflow: hidden;
  pointer-events: none;
}
.modal-is-open dialog {
  pointer-events: auto;
}

:where(.modal-is-opening, .modal-is-closing) dialog,
:where(.modal-is-opening, .modal-is-closing) dialog > article {
  animation-duration: 0.2s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: both;
}
:where(.modal-is-opening, .modal-is-closing) dialog {
  animation-duration: 0.8s;
  animation-name: modal-overlay;
}
:where(.modal-is-opening, .modal-is-closing) dialog > article {
  animation-delay: 0.2s;
  animation-name: modal;
}
/* ... */

